# clockwise

./: .gitignore  CONTIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yml
docs/: QUICKSTART.md
src/clockwise/: __init__.py  __main__.py  app.py
src/clockwise/config/: __init__.py  config.example.toml  defaults.py  manager.py
src/clockwise/models/: __init__.py  stopwatch_model.py  timer_model.py
src/clockwise/state/: __init__.py  persistence.py
src/clockwise/utils/: __utils__.py  formatting.py
src/clockwise/widgets/: __init__.py  preset_manager.py  stopwatch.py  timer.py
tests/: __init__.py  test_formatting.py  test_timer_model.py
